--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,10 @@ fastapi==0.104.1
 uvicorn[standard]==0.24.0
 
 # Machine Learning and Embeddings
-sentence-transformers==2.2.2
-huggingface_hub==0.19.4
+sentence-transformers==2.7.0
+huggingface_hub==0.23.4
+transformers==4.40.2
+torch==2.3.1
 faiss-cpu==1.7.4
 
 # HTTP requests
